feat: Add fonts + update styles

--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -17,6 +17,7 @@ html, body {
 
 body {
   color: $color-white;
+  font-family: $font_family-default;
   font-size: 12pt;
   background: $color-black
 }
