--- a/_sass/_vars.scss
+++ b/_sass/_vars.scss
@@ -13,7 +13,7 @@ $color-white: #fff;
  *
  */
 
-
+$font_family-default: "SangBleuEmpire", system-ui, ui-sans-serif, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, "Apple Color Emoji", "Segoe UI Symbol";
 
 /*
  *
