--- a/_sass/typography/_links.scss
+++ b/_sass/typography/_links.scss
@@ -4,25 +4,61 @@
  *
  */
 
+a {
+  color: $color-white
+}
+
 // Temporary “Introducing mediocrity” link
 .a-full-background {
+  position: relative;
   margin: 2rem;
-  background-image: url("/assets/images/introducing_mediocrity.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
   flex-grow: 1;
   display: block;
-  transition: all .2s ease;
+
+  &:before {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-image: url("/assets/images/introducing_mediocrity.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    transition: all .2s ease;
+    content: "";
+  }
 
   &:hover {
-    opacity: 1
+    &:before {
+      opacity: 1
+    }
+
+    span {
+      opacity: 0;
+      transform: translateY(-10%)
+    }
+  }
+
+  span {
+    top: 3rem;
+    left: 3rem;
+    position: absolute;
+    font-size: 6rem;
+    line-height: 1;
+    display: none;
+    transition: all .2s ease
   }
 }
 
 @media (min-width: $breakpoint-desktop) {
   .a-full-background {
     margin: 4rem;
-    opacity: .8
+    
+    &:before {
+      opacity: .5
+    }
+
+    span {
+      display: block
+    }
   }
 }
